# ClawBackup

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.de.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  clawbackup.py  pyproject.toml
.github/workflows/: homebrew-tap-sync.yml  publish-ghcr.yml  publish-pypi.yml  release.yml
Formula/: clawbackup.rb
docs/: github-release-template.md  homebrew-tap-README.md
scripts/: homebrew_sha256.sh  render_homebrew_formula.py  test_homebrew_local.sh
src/clawbackup/: __init__.py  cli.py
