[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawbackup"
version = "0.1.0"
description = "OpenClaw backup utility CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "rich>=13.7.0",
]

[project.scripts]
clawbackup = "clawbackup.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
